icon-font, padding

--- a/Style/main.css
+++ b/Style/main.css
@@ -10,12 +10,18 @@
   --gray-80: #e7e7e7;
   --gray-50: #f1f1f1;
   --gray-10: #f4f4f4;
-  --air-50: #00AC78;
-  --air-100: #FFD05C;
-  --air-150: #F17C00;
-  --air-200: #FF4123;
-  --air-300: #CB29FF;
-  --air-301: #822000;
+  --color-50: 0, 171, 120;
+  --color-100: 255, 208, 92;
+  --color-150: 241, 124, 0;
+  --color-200: 255, 65, 35;
+  --color-300: 203, 41, 255;
+  --color-301: 130, 32, 0;
+  --air-50: rgb(var(--color-50));
+  --air-100: rgb(ar(var(--color-100)));
+  --air-150: rgb(var(--color-150));
+  --air-200: rgb(var(--color-200));
+  --air-300: rgb(var(--color-300));
+  --air-301: rgb(var(--color-301));
   --white-20: #ffffff20;
   --color-card-3-1: #E9EFFF;
   --color-card-3-2: #bcc7ff;
@@ -43,6 +49,7 @@
   --border-B: 1px solid var(--white-20);
   --border-C: 1px solid var(--gray-200);
   --white: #fff;
+  --white-20: rgba(255, 255, 255, 0.2);
   --padding-A: 2px;
   --padding-B: 4px;
   --padding-C: 8px;
@@ -141,6 +148,10 @@ body {
   color: var(--gray);
   transition: var(--transition-1);
   position: relative;
+}
+.tab-icon-text [class^="font-icon-"],
+.tab-icon-text [class*=" font-icon-"] {
+  font-size: 16px;
 }
 .tab-icon-text > div {
   margin: 0 var(--margin-D);
@@ -251,9 +262,9 @@ body {
 .card-1 {
   display: flex;
   flex-direction: column;
-  padding: var(--padding-F);
+  padding: var(--padding-G);
   border-bottom: var(--border-A);
-  width: calc(100% - 2*var(--padding-F));
+  width: calc(100% - 2*var(--padding-G));
 }
 .card-1 .title {
   font-size: 18px;
@@ -268,7 +279,7 @@ body {
 .card-1 .title-medium {
   font-size: 13px;
   font-weight: 600;
-  margin-bottom: var(--margin-D);
+  margin-bottom: var(--margin-F);
 }
 .card-1 .discription {
   font-size: var(--font-size-input);
@@ -323,19 +334,19 @@ body {
 }
 .card-2 {
   background-color: var(--air-50);
-  border-radius: var(--border-radius-D);
-  margin-top: var(--margin-D);
+  border-radius: var(--border-radius-E);
+  margin-top: var(--margin-G);
   fill: var(--white);
   color: var(--white);
 }
 .card-2 > :nth-child(2) {
-  padding: var(--padding-B) var(--padding-B) var(--padding-D) var(--padding-B) !important;
+  padding: var(--padding-C) var(--padding-C) var(--padding-E) var(--padding-C) !important;
 }
 .card-2 .row-card {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--padding-B) var(--padding-D);
+  padding: var(--padding-C) var(--padding-E);
 }
 .card-2 .row-card .tab-icon-text {
   margin: 0;
@@ -381,16 +392,25 @@ body {
 .card-2 .bg-1 {
   background-color: var(--white-20);
 }
+.card-2 .border-top {
+  border: 1px solid var(--white-20);
+}
+.card-2 .italic {
+  font-style: italic;
+}
+.card-2 .italic > div > span {
+  font-size: 12px;
+}
 .card-3 {
-  margin-top: var(--margin-E);
+  margin-top: var(--margin-G);
   display: flex;
-  padding: var(--padding-F) var(--padding-E);
-  border-radius: var(--border-radius-D);
+  padding: var(--padding-G) var(--padding-F);
+  border-radius: var(--border-radius-E);
 }
 .card-3 .icon {
   border-radius: var(--border-radius-X);
   height: fit-content;
-  margin-right: var(--margin-F);
+  margin-right: var(--margin-H);
 }
 .card-5 {
   background-color: var(--air-50);
@@ -431,20 +451,24 @@ body {
   transform: scale(1);
   transition: var(--transition-1);
 }
-.blue-style {
-  background-color: var(--color-card-3-1);
-  color: var(--color-card-3-3);
+.air-50 > *:first-child {
+  background-color: var(--air-50);
 }
-.blue-style .icon {
-  background-color: var(--color-card-3-2);
+.air-50 > *:last-child {
+  color: var(--air-50);
+  background-color: rgba(var(--color-50), 0.2);
+  border: 1px solid rgba(var(--color-50), 0.5);
+}
+.air-50 > *:last-child .icon {
+  background-color: rgba(var(--color-50), 0.6);
   color: var(--white);
 }
-.green-style {
-  background-color: var(--color-card-3-4);
-  color: var(--color-card-3-6);
+.gray-style {
+  background-color: var(--gray-80);
+  color: var(--primary-text);
 }
-.green-style .icon {
-  background-color: var(--color-card-3-5);
+.gray-style .icon {
+  background-color: var(--gray-300);
   color: var(--white);
 }
 .green-style-text {
@@ -495,6 +519,7 @@ body {
 }
 .table .row-table > div .icon {
   padding: var(--padding-C);
+  font-size: 16px;
 }
 .table .row-table > div .icon.active {
   color: var(--primary-color);
@@ -647,9 +672,9 @@ body {
 .menu-search {
   display: flex;
   align-items: center;
-  padding: var(--padding-A);
+  padding: var(--padding-B);
   background-color: var(--white);
-  border-radius: var(--border-radius-D);
+  border-radius: var(--border-radius-E);
   box-shadow: var(--box-shadow);
 }
 .menu-search input {
@@ -675,12 +700,13 @@ body {
   display: flex;
   flex-direction: column;
   background-color: var(--white);
-  margin-top: var(--margin-E);
-  border-radius: var(--border-radius-D);
+  margin-top: var(--margin-G);
+  border-radius: var(--border-radius-E);
   height: calc(var(--icon-svg) + 2*var(--padding-E) + 2px);
   transition: var(--transition);
   box-shadow: var(--box-shadow);
   overflow: hidden;
+  z-index: 1;
 }
 .main-popup.active {
   height: 100%;
