--- a/Style/main.css
+++ b/Style/main.css
@@ -60,6 +60,7 @@
   --padding-H: 20px;
   --padding-CF: 8px 16px 8px 8px;
   --margin-I: 32px;
+  --margin-K: 24px;
   --margin-H: 16px;
   --margin-G: 14px;
   --margin-F: 12px;
@@ -194,7 +195,7 @@ body {
 }
 .tab-icon-line .tab .icon {
   border-radius: 0;
-  padding: var(--padding-E);
+  padding: var(--padding-F);
   background-color: transparent !important;
 }
 .tab-icon-line .tab .line-status {
@@ -227,13 +228,13 @@ body {
 .tab-icon-line .space .icon {
   opacity: 0;
 }
-#content-tab2 {
+#content-tab1 {
   display: none;
 }
 .scroll-in-table {
   overflow: hidden;
   flex: 1;
-  height: calc(100% - 44px - 1px - 2*var(--padding-F));
+  height: calc(100% - 44px - 1px - 2*var(--padding-G));
 }
 .margin-F {
   min-height: var(--margin-F);
@@ -346,7 +347,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--padding-C) var(--padding-E);
+  padding: var(--padding-B) var(--padding-E);
 }
 .card-2 .row-card .tab-icon-text {
   margin: 0;
@@ -412,6 +413,9 @@ body {
   height: fit-content;
   margin-right: var(--margin-H);
 }
+.card-3 .content {
+  filter: brightness(0.5);
+}
 .card-5 {
   background-color: var(--air-50);
   color: var(--white);
@@ -457,7 +461,7 @@ body {
 .air-50 > *:last-child {
   color: var(--air-50);
   background-color: rgba(var(--color-50), 0.2);
-  border: 1px solid rgba(var(--color-50), 0.5);
+  border: 1px solid rgba(var(--color-50), 0.3);
 }
 .air-50 > *:last-child .icon {
   background-color: rgba(var(--color-50), 0.6);
@@ -491,7 +495,7 @@ body {
 .table .item {
   display: flex;
   align-items: center;
-  font-size: var(--font-size-10);
+  font-size: var(--font-size-input);
   color: var(--gray);
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -510,7 +514,7 @@ body {
   align-items: center;
   font-size: var(--font-size-input);
   border-top: var(--border-A);
-  padding: var(--padding-B);
+  padding: var(--padding-C);
   font-weight: 500;
 }
 .table .row-table > div {
@@ -614,9 +618,10 @@ body {
   padding: var(--padding-F);
   width: var(--width-popup-infor);
 }
-.popup-infor-container .popup-infor .content svg {
-  fill: var(--primary-color);
+.popup-infor-container .popup-infor .content span {
+  color: var(--primary-color);
   margin-right: var(--margin-H);
+  line-height: 24px;
 }
 .popup-infor-container .popup-infor .content .title-medium {
   font-size: 13px;
@@ -662,12 +667,12 @@ body {
   display: flex;
   flex-direction: column;
   width: var(--left-menu);
-  margin: var(--margin-H);
+  margin: var(--margin-K);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
-  height: calc(100vh - 2*var(--margin-H));
+  height: calc(100vh - 2*var(--margin-K));
 }
 .menu-search {
   display: flex;
@@ -676,6 +681,9 @@ body {
   background-color: var(--white);
   border-radius: var(--border-radius-E);
   box-shadow: var(--box-shadow);
+}
+.menu-search .icon {
+  padding: var(--padding-E);
 }
 .menu-search input {
   flex: 1;
@@ -718,7 +726,7 @@ body {
 .map-control {
   display: flex;
   flex-direction: column;
-  margin: var(--margin-H);
+  margin: var(--margin-K);
   position: fixed;
   top: 0;
   right: 0;
@@ -743,11 +751,11 @@ body {
 }
 .time-slider {
   display: flex;
-  padding: var(--margin-H);
+  padding: var(--margin-K);
   position: fixed;
   bottom: 0;
-  left: calc(var(--left-menu) + var(--margin-H));
-  width: calc(100% - var(--left-menu) - 3*var(--margin-H));
+  left: calc(var(--left-menu) + var(--margin-K));
+  width: calc(100% - var(--left-menu) - 3*var(--margin-K));
   z-index: 2;
   transition: var(--transition-1);
 }
@@ -821,12 +829,12 @@ body {
 }
 .filter {
   display: flex;
-  margin: var(--margin-H);
+  margin: var(--margin-K);
   padding: var(--padding-A);
   border-radius: var(--border-radius-X);
   position: fixed;
-  top: 0;
-  left: calc(var(--left-menu) + var(--margin-H));
+  top: var(--padding-B);
+  left: calc(var(--left-menu) + var(--margin-K));
   z-index: 2;
 }
 .filter > div {
@@ -997,7 +1005,8 @@ body {
 }
 .logo {
   position: fixed;
-  top: var(--padding-G);
+  top: var(--padding-H);
+  padding: var(--padding-C);
   right: calc(4*var(--padding-H));
   z-index: 1;
 }
