--- a/Style/main.less
+++ b/Style/main.less
@@ -58,6 +58,8 @@
     //background
     --white: #fff;
     --white-20: rgba(255, 255, 255, 0.2);
+    --white-50: rgba(255, 255, 255, 0.5);
+    --white-80: rgba(255, 255, 255, 0.8);
     //Padding
     --padding-A: 2px;
     --padding-B: 4px;
@@ -954,23 +956,93 @@ body {
     left: calc(var(--left-menu) + var(--margin-K));
     width: calc(100% - var(--left-menu) - 3*var(--margin-K));
     z-index: 2;
-    transition: var(--transition-1);
+    transition: var(--transition);
 
     .slider-container {
         display: flex;
         align-items: center;
+        // flex-direction: column;
         flex: 1;
+        padding: var(--padding-H) var(--padding-G);
+        background-color: var(--white-50);
+        border-radius: var(--border-radius-E);
+        backdrop-filter: blur(10px);
+     
+            .play-btn {
+                display: flex;
+                align-items: center;
+                background-color: var(--white);
+                border-radius: var(--border-radius-X);
+                
+                overflow: hidden;
+                width: fit-content;
+                .time-selected {
+                    font-size: var(--font-size-10);
+                    font-weight: 500;
+                }
+                .icon {
+                    padding: var(--padding-D);
+                }
+            }
 
-        .play-btn {
-            display: flex;
-            background-color: var(--white);
-            border-radius: var(--border-radius-X);
-            box-shadow: var(--box-shadow);
-            overflow: hidden;
-        }
 
         .slider {
             flex: 1;
+            height: fit-content;
+            position: relative;
+            margin: 0 var(--margin-G);
+            .slider-bg, .slider-step,.slider-run {
+                border-radius: var(--border-radius-X);
+                position: absolute;
+                top: 0;
+                right: 0;
+                height: 4px;
+            }
+            .slider-bg {
+                width: 100%;
+                background-color: var(--gray-300);
+            }
+            .slider-run {
+                background: linear-gradient(to right,var(--primary-text), var(--primary-color));
+                // background-color: var(--primary-text);
+                width: 200px;
+                position: relative;
+                .point-drag {
+                    width: 10px;
+                    height: 10px;
+                    background-color: var(--primary-color);
+                    border: 2px solid var(--white);
+                    border-radius: var(--border-radius-X);
+                    position: absolute;
+                    right: 0;
+                    top: -5px;
+                }
+            }
+            .slider-step {
+                color: var(--primary-text);
+                width: 100%;
+                font-size: var(--font-size-10);
+                font-weight: 500;
+                display: flex;
+                justify-content: space-around;
+                .step {
+                    height: 100%;
+                    flex: 1;
+                    display: flex;
+                    justify-content: center;
+                    .line {
+                        height: 100%;
+                        width: 2px;
+                        background-color: var(--white-80);
+                    }
+                    .time {
+                        position: absolute;
+                        bottom: calc(-100% - var(--padding-G));
+                        opacity: 0.6;
+                    }
+                }
+            }
+            
         }
     }
 
@@ -1027,7 +1099,7 @@ body {
 }
 
 .full-width {
-    width: calc(100% - 2*var(--margin-H)) !important;
+    width: calc(100% - 2*var(--margin-K)) !important;
     transition: var(--transition-1);
     left: 0;
 }
