--- a/Style/main.less
+++ b/Style/main.less
@@ -1005,7 +1005,8 @@ body {
             .slider-run {
                 background: linear-gradient(to right,var(--primary-text), var(--primary-color));
                 // background-color: var(--primary-text);
-                width: 200px;
+                width: 100px;
+                transition: var(--transition);
                 position: relative;
                 .point-drag {
                     width: 10px;
