--- a/Style/main.less
+++ b/Style/main.less
@@ -863,6 +863,7 @@ body {
     background-color: var(--white);
     border-radius: var(--border-radius-E);
     box-shadow: var(--box-shadow);
+    z-index: 1;
 
     .icon {
         padding: var(--padding-E);
@@ -890,7 +891,113 @@ body {
         display: none;
     }
 }
+//menu 
+.menu-container {
+    position: relative;
+}
+#menu-toggle:not(checked) ~ .menu-content {
+    display: none;
 
+}
+#menu-toggle:checked ~ .menu-content {
+   display: flex;
+
+}
+
+.menu-content {
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    width: var(--left-menu);
+    background-color: var(--white);
+    border-radius: var(--border-radius-E);
+    box-shadow: var(--box-shadow);
+    top: calc(100% + 2*var(--padding-B));
+    left: calc(-1*var(--padding-B));
+    z-index: 2;
+    
+    color: var(--primary-text);
+    .title {
+        font-size: 18px;
+        font-weight: 600;
+        margin-left: var(--margin-D);
+        display: flex;
+        align-items: center;
+    }
+    &>div {
+        display: flex;
+        align-items: center;
+        padding: var(--padding-B) var(--padding-D);
+        justify-content: space-between;
+        .icon {
+            font-size: var(--font-size-input);
+            &>span {
+                margin-left: var(--margin-F);
+            }
+        }
+    }
+    .item-menu {
+        flex: 1;
+        margin: 0 var(--margin-C);
+        padding: var(--padding-H) var(--padding-F);
+        background-color: var(--gray-100);
+        display: flex;
+        align-items: center;
+        border-radius: var(--border-radius-D);
+        font-size: var(--font-size-input);
+        font-weight: 500;
+        cursor: pointer;
+        &>span {
+            margin-right: var(--margin-F);
+        }
+        &.active {
+            background-color: var(--primary-color);
+            color: var(--white);
+            &:hover {
+                background-color: var(--primary-color-hover)
+            }
+        }
+        &:hover {
+            background-color: var(--gray-200);
+        }
+    }
+    
+}
+//button 
+.pop-btn {
+    display: flex;
+    justify-content: center;
+    width: calc(100%);
+    background-color: var(--primary-color);
+    color: var(--white);
+    border-radius: var(--border-radius-D);
+    font-size: var(--font-size-input);
+    font-weight: 400;
+    padding: var(--padding-E);
+    margin: 0 var(--margin-C) var(--margin-E)var(--margin-C);
+    cursor: pointer;
+    &:hover {
+        background-color: var(--primary-color-hover)
+    }
+}
+//select
+select {
+    width: auto;
+    padding: 12px 32px 12px 16px;
+    border: none;
+    background-color: #fff;
+    background-image: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8"?><svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg"><line x1="9.419" y1="0.469661" x2="4.46925" y2="5.41941" stroke="%23999" stroke-width="1.5"/><line x1="5.53022" y1="5.4194" x2="0.580469" y2="0.469651" stroke="%23999" stroke-width="1.5"/></svg>');
+    background-repeat: no-repeat;
+    background-position: calc(100% - 16px) 50%;
+    background-size: 10px 6px;
+    color: var(--gray);
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    font-size: var(--font-size-input);
+    font-weight: 400;
+    outline: none;
+}
 //main-popup
 .main-popup {
     display: flex;
@@ -902,7 +1009,7 @@ body {
     transition: var(--transition);
     box-shadow: var(--box-shadow);
     overflow: hidden;
-    z-index: 1;
+    // z-index: 1;
 
     &.active {
         height: 100%;
@@ -957,6 +1064,8 @@ body {
     left: calc(var(--left-menu) + var(--margin-K));
     width: calc(100% - var(--left-menu) - 3*var(--margin-K));
     z-index: 2;
+    overflow: visible;
+    height: 0px;
 
     .slider-container {
         display: flex;
